/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

// import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.MeteringPoints.Contracts";

message CreateMeteringPoint {
  string gsrnNumber = 1;
  string typeOfMeteringPoint = 2;
  string subTypeOfMeteringPoint = 3;
  string meterReadingOccurrence = 4;
  int32 maximumCurrent = 5;
  int32 maximumPower = 6;
  string meteringGridAreaUsedDomainLocation = 7;
  string powerPlantDomainLocation = 8;
  string locationDescription = 9;
  string includedProductCharacteristic = 10;
  string parentRelatedMeteringPoint = 11;
  // Address InstallationLocationAddress = 12;
}

message MeteringPointEnvelope {
  oneof MeteringPointMessages {
    CreateMeteringPoint createMeteringPoint = 1;
  }
}
